// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. no related articles 1`] = `null`;

exports[`2. analytics with no related articles 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "articles": Array [],
        "eventTime": "2018-01-01T00:00:00.000Z",
        "template": "OPINION_AND_TWO",
      },
      "component": "Page",
      "object": "RelatedArticles",
    },
  ],
]
`;

exports[`3. one opinion related article 1`] = `
<div>
  <div>
    <h3
      aria-level="3"
      role="heading"
    >
      Related articles
    </h3>
  </div>
  <div>
    <div>
      <div>
        <div>
          <Link
            url="https://test.io"
          >
            <Card
              image={
                Object {
                  "uri": "https://crop23.io",
                }
              }
              imageRatio={0.6135458167330677}
              isReversed={true}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    OPINION
                  </div>
                </div>
                <div>
                  <span>
                    Sathnam Sanghera
                  </span>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  Test Headline
                </h3>
                <div>
                  <div>
                    <span>
                      
                      Summary 125
                      ...
                    </span>
                  </div>
                  <div>
                    <span>
                      
                      Summary 160
                      ...
                    </span>
                  </div>
                </div>
                <div>
                  March 13 2015, 06:54pm
                </div>
              </div>
            </Card>
          </Link>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`4. analytics for one opinion related article 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "articles": Array [
          Object {
            "byline": "Sathnam Sanghera",
            "headline": "Test Headline",
            "id": "a88b0330-d14c-11e7-b1ec-8503a5941b97",
            "publishedTime": "2015-03-13T18:54:58.000Z",
            "role": "standard-1",
          },
        ],
        "eventTime": "2018-01-01T00:00:00.000Z",
        "template": "OPINION_AND_TWO",
      },
      "component": "Page",
      "object": "RelatedArticles",
    },
  ],
]
`;

exports[`5. one opinion and one support related article 1`] = `
<div>
  <div>
    <h3
      aria-level="3"
      role="heading"
    >
      Related articles
    </h3>
  </div>
  <div>
    <div>
      <div>
        <div>
          <Link
            url="https://first.io"
          >
            <Card
              image={
                Object {
                  "uri": "https://crop23-1.io",
                }
              }
              imageRatio={0.6135458167330677}
              isReversed={true}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    OPINION
                  </div>
                </div>
                <div>
                  <span>
                    Sathnam Sanghera
                  </span>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  First Headline
                </h3>
                <div>
                  <div>
                    <span>
                      
                      Summary 125
                      ...
                    </span>
                  </div>
                  <div>
                    <span>
                      
                      Summary 145
                      ...
                    </span>
                  </div>
                  <div>
                    <span>
                      
                      Summary 225
                      ...
                    </span>
                  </div>
                </div>
                <div>
                  March 13 2015, 06:54pm
                </div>
              </div>
            </Card>
          </Link>
        </div>
        <div />
        <div>
          <div>
            <Link
              url="https://second.io"
            >
              <Card
                image={
                  Object {
                    "uri": "https://crop169-2.io",
                  }
                }
                imageRatio={1.7777777777777777}
                isReversed={false}
                showImage={true}
              >
                <div>
                  <div>
                    <div>
                      DEFENCE CUTS | ANALYSIS
                    </div>
                  </div>
                  <h3
                    aria-level="3"
                    role="heading"
                  >
                    Second Headline
                  </h3>
                  <div />
                  <div>
                    January 17 2018, 12:00pm
                  </div>
                  <div>
                    <span>
                      Deborah Haynes
                    </span>
                  </div>
                </div>
              </Card>
            </Link>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`6. analytics for one opinion and one support related article 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "articles": Array [
          Object {
            "byline": "Sathnam Sanghera",
            "headline": "First Headline",
            "id": "a88b0330-d14c-11e7-b1ec-8503a5941b97",
            "publishedTime": "2015-03-13T18:54:58.000Z",
            "role": "standard-1",
          },
          Object {
            "byline": "Deborah Haynes",
            "headline": "Second Headline",
            "id": "e121aac6-d15d-11e7-b1ec-8503a5941b97",
            "publishedTime": "2018-01-17T12:00:00.000Z",
            "role": "standard-2",
          },
        ],
        "eventTime": "2018-01-01T00:00:00.000Z",
        "template": "OPINION_AND_TWO",
      },
      "component": "Page",
      "object": "RelatedArticles",
    },
  ],
]
`;

exports[`7. opinion and two support related articles 1`] = `
<div>
  <div>
    <h3
      aria-level="3"
      role="heading"
    >
      Related articles
    </h3>
  </div>
  <div>
    <div>
      <div>
        <div>
          <Link
            url="https://first.io"
          >
            <Card
              image={
                Object {
                  "uri": "https://crop23-1.io",
                }
              }
              imageRatio={0.6135458167330677}
              isReversed={true}
              showImage={true}
            >
              <div>
                <div>
                  <div>
                    OPINION
                  </div>
                </div>
                <div>
                  <span>
                    Sathnam Sanghera
                  </span>
                </div>
                <h3
                  aria-level="3"
                  role="heading"
                >
                  First Headline
                </h3>
                <div>
                  <div>
                    <span>
                      
                      Summary 125
                      ...
                    </span>
                  </div>
                  <div>
                    <span>
                      
                      Summary 160
                      ...
                    </span>
                  </div>
                </div>
                <div>
                  March 13 2015, 06:54pm
                </div>
              </div>
            </Card>
          </Link>
        </div>
        <div />
        <div>
          <div>
            <Link
              url="https://second.io"
            >
              <Card
                image={
                  Object {
                    "uri": "https://crop169-2.io",
                  }
                }
                imageRatio={1.7777777777777777}
                isReversed={false}
                showImage={true}
              >
                <div>
                  <div>
                    <div>
                      DEFENCE CUTS
                    </div>
                  </div>
                  <h3
                    aria-level="3"
                    role="heading"
                  >
                    Second Headline
                  </h3>
                  <div />
                  <div>
                    January 17 2018, 12:00pm
                  </div>
                  <div>
                    <span>
                      Deborah Haynes
                    </span>
                  </div>
                </div>
              </Card>
            </Link>
          </div>
          <div>
            <Link
              url="https://third.io"
            >
              <Card
                image={
                  Object {
                    "uri": "https://crop169-3.io",
                  }
                }
                imageRatio={1.7777777777777777}
                isReversed={false}
                showImage={true}
              >
                <div>
                  <div>
                    <div>
                      DEFENCE CUTS | ANALYSIS
                    </div>
                  </div>
                  <h3
                    aria-level="3"
                    role="heading"
                  >
                    Third Headline
                  </h3>
                  <div />
                  <div>
                    January 17 2018, 12:00pm
                  </div>
                  <div>
                    <span>
                      Deborah Haynes
                    </span>
                  </div>
                </div>
              </Card>
            </Link>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`8. analytics for opinion and two support related articles 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "articles": Array [
          Object {
            "byline": "Sathnam Sanghera",
            "headline": "First Headline",
            "id": "a88b0330-d14c-11e7-b1ec-8503a5941b97",
            "publishedTime": "2015-03-13T18:54:58.000Z",
            "role": "standard-1",
          },
          Object {
            "byline": "Deborah Haynes",
            "headline": "Second Headline",
            "id": "7bd4be00-d15e-11e7-b1ec-8503a5941b97",
            "publishedTime": "2018-01-17T12:00:00.000Z",
            "role": "standard-2",
          },
          Object {
            "byline": "Deborah Haynes",
            "headline": "Third Headline",
            "id": "e121aac6-d15d-11e7-b1ec-8503a5941b97",
            "publishedTime": "2018-01-17T12:00:00.000Z",
            "role": "standard-3",
          },
        ],
        "eventTime": "2018-01-01T00:00:00.000Z",
        "template": "OPINION_AND_TWO",
      },
      "component": "Page",
      "object": "RelatedArticles",
    },
  ],
]
`;
